--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -50,7 +50,7 @@
           </a>
           <center>
           <a class="brand" href="/sales">
-            <%= image_tag 'Logo_Website_v2.png', :height => 34, :width => 180 %>
+            <%= image_tag 'valydation_logo.png', :height => 34, :width => 180 %>
           </a>
         </center>
 		
@@ -70,13 +70,6 @@
     
     <%= yield %>
 
-    <div id="footer">
-	    <div class="container">
-		    <div align="center">
-          <a href="/page/faq-shoppers">FAQ</a> | <a href="/page/tos">Terms of Service</a> | <a href="/page/privacy">Privacy</a></p>
-	      </div>
-	    </div>
-	  </div>
 
     <link href="/page/custom-css.css" media="screen" rel="stylesheet" type="text/css" />
 
