--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -48,8 +48,8 @@ function submitFilter() {
       <% end %>
     </span>
 
-    <a href="/featured/new-stuff">
-      <%= image_tag "Whats_New.png", :width => 100, :height => 24, :class => "faves-script" %>
+    <a href="/featured/new-stuff" class="faves-script btn btn-success">
+      What's New
     </a>
 
     <div id="filter-section" class="filter-section">	
