--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,10 @@
 
     <div id="footer">
 		    <medium>
-	       <font color="#ffffff"> <p>&copy;<%= link_to "Valydation 2013", "http://mysaletable.com" %> | <a href="/page/faq-shoppers">FAQ</a> | <a href="/page/tos">Terms of Service</a> | <a href="/page/privacy">Privacy</a></p>
+	       <font color="#ffffff"> 
+		<p><%= link_to "About Us", "pages/about" %> | <a href="/page/faq-shoppers">JOBS</a> | <%= link_to "BLOG", "http://www.valydation.tumblr.com", :target => "_blank" %> | <a href="/page/privacy">BECOME A SILICON LEGEND</a> | <a href="/page/faq-shoppers">AFFILIATES</a> | <a href="/page/faq-shoppers">HELP</a> | <a href="/page/faq-shoppers">JOBS</a> | <a href="/page/faq-shoppers">AUTHENTICITY</a> | <a href="/page/faq-shoppers">CONTACT US</a></p>
+		
+		<p>&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://mysaletable.com" %><a href="/page/tos">Terms of Service</a> and <a href="/page/privacy">Privacy Policy</a></p>
 	     </font> </medium>
 	    </div>
 	 
