--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -3,7 +3,10 @@
 	<div class="container">
   <div class="category-feed-sale well">
     <div class="back-button btn btn-success"><a href="/sales">Back</a></div>
-		
+		<%= sale.category_id if sale.category_id %>
+		<a href="/featured/new-stuff" class="faves-script-detail btn btn-success">
+      What's New
+    </a>
 	</div>
 	
 </div>
