--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,6 +4,27 @@ body {
 }
 </style>
 <div class="container">
+	      <div class="row-fluid">
+	        <div class="span3">
+		<div class="marketing">
+	          <div class="well sidebar-nav">
+	            <ul class="nav nav-list">
+	              <li class="nav-header">Helpful Stuff</li>
+            <li class="active"><a href="/page/about">About</a></li>
+            <li><a href="/page/photo-tips">Authenticity</a></li>
+             <li><a href="/page/help">Help</a></li>
+            <li><a href="http://valydation.tumblr.com/">Blog</a></li>
+              <li><a href="/page/jobs">Jobs</a></li>
+            <li class="active"><a href="/contact">Contact</a></li>
+            <li class="nav-header">Legal Stuff</li>
+            <li><a href="/page/privacy">Privacy Policy</a></li>
+            <li><a href="/page/tos">Terms of Service</a></li>
+	              
+	            </ul>
+	          </div><!--/.well -->
+	        </div><!--/span-->
+	</div><!-- end marketing -->
+<div class="container">
   <div class="span2"></div>
   <div class="span8">
 <div class="marketing contact">
@@ -31,6 +52,6 @@ body {
 <% end %>
 </div>
 </div>
-</div>
+</div></div></div>
 <br><br><br>
 
