--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -173,6 +173,7 @@
 
 .bio {
 	vertical-align: top;
+	width:300px;
 	
 }
 
@@ -746,7 +747,7 @@ width: 62px;
     }
     .banner img {
       position: absolute;
-      
+      border: 1px solid gray;
       min-width: 940px;
       height: 400px;
 	  margin:0 45px;
