--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -27,7 +27,7 @@ body {
 <div class="container">
   <div class="span2"></div>
   <div class="span8">
-<div class="marketing contact">
+<div class="contact-margin contact">
   <p><font size="8">Contact</font></p>
   <h4>Send us a message</h4>
   <%= form_tag(contact_url, :method => "post") do |f| %>
