--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <% if @user.is_merchant %><li><a href="<%= new_sale_url %>">Upload</a></li><% end %>
-              <li><a href=#>Customer Care</a></li>
+              <li><a href=#>Product Care</a></li>
 							<li><a href="<%= edit_user_url("self") %>">Account</a></li>
               <li><a href="/page/about">About Us</a></li>
               <li><%= link_to "Blog", "http://www.valydation.tumblr.com", :target => "_blank" %></li>
