--- a/app/assets/stylesheets/bootstrap-responsive.css
+++ b/app/assets/stylesheets/bootstrap-responsive.css
@@ -61,7 +61,7 @@
   display: inherit !important;
 }
 
-@media (min-width: 768px) and (max-width: 979px) {
+/*@media (min-width: 768px) and (max-width: 979px) {
   .hidden-desktop {
     display: inherit !important;
   }
@@ -89,9 +89,9 @@
   .hidden-phone {
     display: none !important;
   }
-}
+}*/
 
-@media (min-width: 1200px) {
+@media (min-width: 600px) {
   .row {
     margin-left: -30px;
     *zoom: 1;
