--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,9 +55,10 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <% if @user.is_merchant %><li><a href="<%= new_sale_url %>">Upload</a></li><% end %>
-              <li><a href="/page/photo-tips">Product Care</a></li>
+							<li><a href="/purchases/view_cart" class="cart-icon"><%= image_tag 'cart-icon.png', :height => 40, :width => 32 %></a></li>
 							<li><a href="<%= edit_user_url("self") %>">Account</a></li>
               <li><a href="/page/about">About Us</a></li>
+							<li><a href="/consignment">Consignment</a></li>
               <li><%= link_to "Blog", "http://www.valydation.tumblr.com", :target => "_blank" %></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -72,7 +73,7 @@
     <div id="footer">
 		    <medium>
 	       <font color="#ffffff"> 
-		<p><%= link_to "ABOUT US", "pages/about" %> | <%= link_to "BLOG", "http://www.valydation.tumblr.com", :target => "_blank" %> | <a href="/page/privacy">BECOME A SILICON LEGEND</a> | <a href="/page/affiliates">AFFILIATES</a> | <a href="/page/help">HELP</a> | <a href="/page/jobs">JOBS</a> | <a href="/page/authenticity">AUTHENTICITY</a> | <a href="/page/contact">CONTACT US</a></p>
+		<p><%= link_to "ABOUT US", "pages/about" %> | <%= link_to "BLOG", "http://www.valydation.tumblr.com", :target => "_blank" %> | <a href="/page/privacy">BECOME A SILICON LEGEND</a> | <a href="/page/affiliates">AFFILIATES</a> | <a href="/page/help">HELP</a> | <a href="/page/jobs">JOBS</a> | <a href="/page/authenticity">AUTHENTICITY</a> | <a href="/contact">CONTACT US</a></p>
 		
 		<p>&copy;<%= link_to "Valydation 2013, All rights reserved.", "http://valydation.com" %><a href="/page/tos"> Terms of Service</a> and <a href="/page/privacy">Privacy Policy</a></p>
 	     </font> </medium>
