Trying to Speed Up Image Processing

--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -73,8 +73,8 @@
 							    end %>
 	        
 	    
-
-	        </ul>
+</ul>
+	        
 	</div>
 	<% if detail %>
     <br><br><br><br>
@@ -154,11 +154,11 @@ return true;
 	                 
 											                     </li>
 	                 <li>																								<a href="<%= twitter_share_url(sale) %>">
-																			      <%= image_tag "T_logo.png", :height => 32, :width => 32 %>
+																			      <%= image_tag "twitter_32_icon.png", :height => 32, :width => 32 %>
 																			  &#160;&#160;  </a>
 									</li>
 	                 <li><a href="<%= fb_share_url(sale) %>">
-									        <%= image_tag "f_logo.png", :height => 32, :width => 32 %>
+									        <%= image_tag "facebook_icon_32.png", :height => 32, :width => 32 %>
 									        &#160;&#160;
 									      </a>
 									</li>
