--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -1120,7 +1120,7 @@ width: 62px;
 .additional-prices dl.msrp dd,
 .additional-prices dl.msrp dt   { color: #333; }
 .additional-prices dl.msrp dd   { text-decoration: line-through; }
-.additional-links               { margin:20px 0; padding: 15px 0; border-bottom: 1px solid #bdbdbd;
+.additional-links               { margin:20px 0; padding: 15px 0 10px 0; border-bottom: 1px solid #bdbdbd;
 border-top: 1px solid #bdbdbd; }
 .additional-links li            { background: url(/skin/frontend/portero/default/images/bg_additional_links.gif) center left no-repeat; padding-left: 10px; }
 .additional-links a             { color: #0f7ecd; font-weight: bold }
@@ -1172,12 +1172,12 @@ border-top: 1px solid #bdbdbd; }
 
 .more-views ul {
 	padding: 0;
-	  margin: 0 0 10px -19px !important;
+	  margin: 0 0 10px 0px !important;
 	}
 	
 	.category-feed-detail {
 	margin-bottom: -21px;
-	margin-top: 24px;
+	margin-top: 0px;
 	font-size: 14px !important;
 	color: #432060 !important;
 	position: relative;
@@ -1207,4 +1207,8 @@ border-top: 1px solid #bdbdbd; }
 
 .cart-icon {
 	margin-top: -2px;
+}
+
+.comment-form {
+	padding-top:10px;
 }
