Adding Feed 2x Back

--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -20,13 +20,28 @@
 
   <div style="float:right; padding: 24px;">
     <div style="padding:8px;">
-      <img src="<%= @sale.image_0.versions[:feed] %>">
+      <img src="<%= @sale.image_0.versions[:web_thumbnail] %>">
     </div>
     <div style="padding:8px;">
-      <img src="<%= @sale.image_1.versions[:feed] %>">
+      <img src="<%= @sale.image_1.versions[:web_thumbnail] %>">
     </div>
     <div style="padding:8px;">
-      <img src="<%= @sale.image_2.versions[:feed] %>">
+      <img src="<%= @sale.image_2.versions[:web_thumbnail] %>">
+    </div>
+		<div style="padding:8px;">
+      <img src="<%= @sale.image_3.versions[:web_thumbnail] %>">
+    </div>
+    <div style="padding:8px;">
+      <img src="<%= @sale.image_4.versions[:web_thumbnail] %>">
+    </div>
+    <div style="padding:8px;">
+      <img src="<%= @sale.image_5.versions[:web_thumbnail] %>">
+    </div>
+		<div style="padding:8px;">
+      <img src="<%= @sale.image_6.versions[:web_thumbnail] %>">
+    </div>
+    <div style="padding:8px;">
+      <img src="<%= @sale.image_7.versions[:web_thumbnail] %>">
     </div>
   </div>
 
